--- a/Grading-Administration/Gradings-Administration-client/Views/GradePopUpView.xaml
+++ b/Grading-Administration/Gradings-Administration-client/Views/GradePopUpView.xaml
@@ -8,7 +8,11 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="GradePopUpView">
 
-    <Grid>
-        
+    <Grid Background="White">
+        <Label Content="{Binding Name}" HorizontalAlignment="Left" Margin="15,22,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="Bold"/>
+        <Label Content="{Binding Date}" HorizontalAlignment="Left" Margin="15,66,0,0" VerticalAlignment="Top" FontSize="15"/>
+        <Label Content="{Binding Norm}" HorizontalAlignment="Left" Margin="15,130,0,0" VerticalAlignment="Top" FontSize="15"/>
+        <Label Content="{Binding Passed}" HorizontalAlignment="Left" Margin="15,156,0,0" VerticalAlignment="Top" FontSize="15"/>
+
     </Grid>
 </Page>
