--- a/Grading-Administration/Gradings-Administration-client/Views/AddGradeView.xaml
+++ b/Grading-Administration/Gradings-Administration-client/Views/AddGradeView.xaml
@@ -5,13 +5,13 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Gradings_Administration_client.Views"
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="400"
+      d:DesignHeight="200" d:DesignWidth="300"
       Title="AddGradeView">
 
     <Grid Background="White">
-        <TextBox HorizontalAlignment="Center" Margin="0,111,0,0" Text="{Binding GradeText}" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Button Content="Button" HorizontalAlignment="Center" Margin="0,162,0,0" VerticalAlignment="Top" Command="{Binding AddGrade}"/>
-        <Label Content="Geen juiste waarde" HorizontalAlignment="center" Margin="0,129,0,0" VerticalAlignment="Top" Foreground="Red" Opacity="{Binding ErrorOpacity}"/>
+        <TextBox HorizontalAlignment="Left" Margin="87,58,0,0" Text="{Binding GradeText}" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="127,109,0,0" VerticalAlignment="Top" Command="{Binding AddGrade}"/>
+        <Label Content="Geen juiste waarde" HorizontalAlignment="Left" Margin="92,76,0,0" VerticalAlignment="Top" Foreground="Red" Opacity="{Binding ErrorOpacity}"/>
 
     </Grid>
 </Page>
