--- a/Grading-Administration/Gradings-Administration-client/Views/AddGradeView.xaml
+++ b/Grading-Administration/Gradings-Administration-client/Views/AddGradeView.xaml
@@ -10,7 +10,7 @@
 
     <Grid Background="White">
         <TextBox HorizontalAlignment="Left" Margin="87,58,0,0" Text="{Binding GradeText}" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="127,109,0,0" VerticalAlignment="Top" Command="{Binding AddGrade}"/>
+        <Button Content="Voer cijfer in" HorizontalAlignment="Left" Margin="110,109,0,0" VerticalAlignment="Top" Command="{Binding AddGrade}"/>
         <Label Content="Geen juiste waarde" HorizontalAlignment="Left" Margin="92,76,0,0" VerticalAlignment="Top" Foreground="Red" Opacity="{Binding ErrorOpacity}"/>
 
     </Grid>
